<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragment.CommunityFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/commnunity_translate_layout"
            android:layout_width="match_parent"
            app:errorEnabled="true"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/commnunity_translate_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:hint="@string/input_something"
                android:inputType="text"
                android:paddingLeft="10dp"
                android:paddingRight="10dp" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/commnunity_translate_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/to_translate"
            android:textAllCaps="false" />

        <TextView
            android:id="@+id/commnunity_translate_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/result"
            android:textColor="@color/colorPrimary" />
    </LinearLayout>

</FrameLayout>
