...
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/app_bottom_menu_height"
    android:background="@color/white">

    <LinearLayout
        android:id="@+id/main_bottom_menu_content"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_alignParentBottom="true"
        android:background="@color/white"
        android:orientation="horizontal"
        android:paddingBottom="3dp"
...
                android:layout_height="wrap_content"
                android:text="@string/home" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/main_bottom_menu_community"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

...
