<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">App</string>
    <string name="cancle">取消</string>
    <string name="confirm">确定</string>
    <string name="click_again_to_exit">再按一次退出程序</string>
    <string name="home">主页</string>
    <string name="community">社区</string>
    <string name="shop">购物</string>
    <string name="me">我</string>
    <string name="app_breakdown">程序出现异常,即将重启应用</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="input_something">Input something!</string>
    <string name="to_translate">To Translate</string>
    <string name="result">Result</string>
    <string name="title_activity_template">TemplateActivity</string>
    <string name="action_settings">Settings</string>
</resources>